# lexaswitcher

./: INSTALL_LEXA_SWITCHER_850k.ps1  LEXA_SWITCHER_850k.ahk  README.md  START_LEXA_SWITCHER_850k.cmd  START_LEXA_SWITCHER_850k.ps1  START_LEXA_SWITCHER_850k.py  pyproject.toml  requirements.txt
app/: lexa_switcher.py
config/: config.ini
data/: autofixes.txt
src/lexa_switcher/: app.py  config.py  converter.py
src/lexa_switcher.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/lexa_switcher/backends/: base.py  windows.py
src/lexa_switcher/data/: exceptions-en.txt
ubuntu-macos/: START_LEXA_SWITCHER_850k.sh
windows/: LEXA_SWITCHER_850k.ahk  START_LEXA_SWITCHER_850k.cmd  START_LEXA_SWITCHER_850k.ps1
